--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+/* 1.0.4 */
+- Fix error empty color (set color default scss)
+- Update settings color text field
+- Update video setting instagram app
+
 /* 1.0.3 */
 - Fix Instagram media modal
 - Fix Css Z-Index modal search product
